--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accordion</title>
+    <title>News App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+
 	<nav>
 		<div class="main-nav container flex">
 			<a href="#" onclick="reload()" class="company-logo">
@@ -26,26 +26,25 @@
 			</div>
 		</div>
 	</nav>
-	
+
 	<main>
-		<div class="card-container container flex" id="card_container">
-			
-		</div>
+		<div class="card-container container flex" id="card_container"></div>
 	</main>
-	
+
+	<!-- News Card Template -->
 	<template id="template_news_card">
 		<div class="card">
-				<div class="card-header">
-					<img src="https://placehold.co/400x200" alt="news-image" id="news-img">
-				</div>
-				<div class="card-content">
-					<h3 id="news-title">This is the Title</h3>
-					<h6 class="news-source" id="news-source">End Gadget 03/10/2025</h6>
-					<p class="news-desc" id="news-desc">my phone number is This Is Italic is the people who are not going to be able to make you feel better</p>
-				</div>
+			<div class="card-header">
+				<img src="https://placehold.co/400x200" alt="news-image" id="news-img">
 			</div>
+			<div class="card-content">
+				<h3 id="news-title">Title</h3>
+				<h6 class="news-source" id="news-source">Source & Date</h6>
+				<p class="news-desc" id="news-desc">Description</p>
+			</div>
+		</div>
 	</template>
-	
+
     <script src="script.js"></script>
 </body>
 </html>
